--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "babel-loader": "^8.0.4",
+    "css-loader": "^2.1.0",
     "nanoid": "^2.0.0",
     "node-static": "^0.7.11",
     "path": "^0.12.7",
+    "style-loader": "^0.23.1",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.1.2"
   },
