--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "1.0.0",
   "main": "./src/index.js",
   "scripts": {
-    "dev": "npm run build && cp ./dist/ivid.js ./sample/lib/ && nodemon ./sample/server.js",
-    "build": "webpack --config webpack.config.js"
+    "dev": "npm run build && npm run dev:setup && nodemon ./sample/server.js",
+    "dev:setup": "cp -R ./dist/ivid.min.css ./sample/lib/ && cp -R ./dist/ivid.min.js ./sample/lib/",
+    "build": "npm run build:style && npm run build:script",
+    "build:style": "minify ./src/style.css > ./dist/ivid.min.css",
+    "build:script": "webpack --config webpack.config.js"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "babel-loader": "^8.0.4",
     "css-loader": "^2.1.0",
-    "nanoid": "^2.0.0",
+    "minify": "^4.1.0",
     "node-static": "^0.7.11",
     "path": "^0.12.7",
     "style-loader": "^0.23.1",
@@ -24,7 +27,6 @@
     "interactive",
     "video",
     "player",
-    "wrapper",
     "webcomponent",
     "js"
   ],
