docs: create some documentation, refactor  sandbox

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "./src/index.js",
   "scripts": {
-    "dev": "npm run build && npm run dev:setup && node ./sample/server.js",
-    "dev:setup": "cp -R ./dist/ivid.min.css ./sample/lib/ && cp -R ./dist/ivid.min.js ./sample/lib/",
+    "dev": "npm run build && npm run dev:setup && node ./sandbox/server.js",
+    "dev:setup": "cp -R ./dist/ivid.min.css ./sandbox/lib/ && cp -R ./dist/ivid.min.js ./sandbox/lib/",
     "build": "npm run build:style && npm run build:script",
     "build:style": "minify ./src/style.css > ./dist/ivid.min.css",
     "build:script": "webpack --config webpack.config.js"
