--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "npm run build:style && npm run build:script && npm run licenser",
     "build:style": "minify ./src/style.css > ./dist/ivid.min.css",
     "build:script": "webpack --config webpack.config.js",
-    "licenser": "node licenser.js"
+    "licenser": "node licenser.js",
+    "publish": "npm run build && npm publish"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
